Display known door property in view label